--- a/festivals.html
+++ b/festivals.html
@@ -13,24 +13,43 @@
     <title>New Yam Festival</title>
   </head>
   <body>
-    <header>
-      <div class="header-image">
+    <header class ="header-area"> 
+      <span>
         <img class="logo-image" src="assets/images/yam_stick.jpeg" alt="Yam Festival Logo">
-        <h1 class="logo-title">History of The New Yam Festival</h1>
-      </div>
-      <div class="spacer1"></div>
-    </header>
-    <nav>
-      <div class="links">
-      <span class="link-span"
-        ><a href="index.html" class=" nav-link">Home</a></span
-      >
-      <span class="link-span"></span>
-        <a href="igbo-tribe.html" class="nav-link">Igbo Tribe</a>
       </span>
-      <a href="festivals.html" class="nav-link nav-link-selected">Festivals</a>
-    </div>
-    </nav>
+      <span class="logo-title">The New Yam Festival</span>
+      <nav>
+      <span class="link-span"
+      ><a href="index.html" class=" nav-link">Home</a></span
+    >
+    <span class="link-span"></span>
+      <a href="igbo-tribe.html" class="nav-link">Igbo Tribe</a>
+    </span>
+    <a href="festivals.html" class="nav-link nav-link-selected">Festivals</a>
+  </nav>
+      <!-- <div class="spacer"></div> -->
+    </header>
+    <article>
+      <div class="yam-intro">
+        <h3 class="centered-text">Celebrating New Yam Festival</h3>
+      </div>
+      <section class="yam-container">
+        <span>
+          <img src="assets/images/yams-2.jpg" alt="Pack of Yams" class="yam-image">
+        </span>
+        <span>
+          <img src="assets/images/yam_stick.jpeg" alt="Pack of Yams" class="yam-image">
+        </span>
+        <span>
+          <img src="assets/images/yam_on_stick.jpg" alt="Pack of Yams" class="yam-image">
+        </span>
+        <div class="spacer"></div>
+        <div>
+          <h3 class="centered-text">The Igbo Tribe</h3>
+
+        </div>
+      </section>
+    </article>
     <footer>
       <div>
         <span><a href="index.html">Home</a></span
@@ -43,12 +62,12 @@
       </span>
 
       </div>
-      <span class="find-us">Contact Us:</span>
+      <span class="contact-us">Contact Us:</span>
       <a
         href="https://www.facebook.com/polycarp.anyanwu"
         target="_blank"
         rel="noopener"
-        aria-label="Check us out on Facebook)"
+        aria-label="Check us out on Facebook"
         ><img src="assets/images/facebook.png" alt="Facebook" class = "social-link-image"></a
       >
       <a
@@ -73,7 +92,7 @@
         aria-label="Check us out on LinkedIn"><img src="assets/images/linkedin.png" alt="LinkedIn" class = "social-link-image">
       </a>
 
-      <p>Copyright © Polycarp Anyanwu as part of the requirements for a Diploma in Full Stack Software Development 2021</p>
+      <p class="copyright centered-text">Copyright © Polycarp Anyanwu as part of the requirements for a Diploma in Full Stack Software Development 2021</p>
     </footer>
   </body>
 </html>
