feat: Added videos to festival page

--- a/festivals.html
+++ b/festivals.html
@@ -27,27 +27,28 @@
     </span>
     <a href="festivals.html" class="nav-link nav-link-selected">Festivals</a>
   </nav>
-      <!-- <div class="spacer"></div> -->
+      <div class="spacer"></div>
     </header>
     <article>
       <div class="yam-intro">
         <h3 class="centered-text">Celebrating New Yam Festival</h3>
       </div>
-      <section class="yam-container">
-        <span>
-          <img src="assets/images/yams-2.jpg" alt="Pack of Yams" class="yam-image">
-        </span>
-        <span>
-          <img src="assets/images/yam_stick.jpeg" alt="Pack of Yams" class="yam-image">
-        </span>
-        <span>
-          <img src="assets/images/yam_on_stick.jpg" alt="Pack of Yams" class="yam-image">
-        </span>
-        <div class="spacer"></div>
-        <div>
-          <h3 class="centered-text">The Igbo Tribe</h3>
-
+      <section>
+        <div class="videoitem">
+          <hr class = "video-intro-line">
+          <p>Celebrating new yam festival in Igbo land. The Eze (Traditional Ruler) of the community performs the ritual of being the first to cut and eat the new yam. After that, members of the community could partake of the eating of yams for the harvest season.</p>
+          <video src="assets/videos/yam_festival1.mp4" controls>
+            <p class="video-intro-text">First video on celebrating new yam festival: Your browser doesn't support HTML5 video</p>
+          </video>
         </div>
+        <div class="videoitem">
+          <hr class = "video-intro-line">
+          <p>Several traditional/cultural dances are displayed by the people and a joyous mood. Sometimes illustrous sons of the town offer assistance to their fellow citizens to mark the celebrations. In some instances traditional titles are conferred on deserving indigenes of the town </p>
+          <video src="assets/videos/yam_festival2.mp4" controls loop>
+            <p>Second video on celebrating new yam festival: Your browser doesn't support HTML5 video</p>
+          </video>
+        </div>
+
       </section>
     </article>
     <footer>
