maint: Added caption to yam pictures on home page

--- a/index.html
+++ b/index.html
@@ -35,16 +35,21 @@
         <p class="centered-text normal-size ">Yam is the common name for some plant species in the genus Dioscorea (family Dioscoreaceae) that form edible tubers.[1] Yams are perennial herbaceous vines cultivated for the consumption of their starchy tubers in many temperate and tropical regions, especially in West Africa, South America and the Caribbean, Asia, and Oceania.[1] The tubers themselves, also called "yams", come in a variety of forms owing to numerous cultivars and related species.[1]</p>
       </div>
       <section class="yam-container">
-        <span>
+        <div class="yams">
           <img src="assets/images/yams-2.jpg" alt="Pack of Yams" class="yam-image">
-        </span>
-        <span>
+          <p class="centered-text"><strong>Yams harvested on ground</strong></p>
+        </div>
+        <div class="yams">
           <img src="assets/images/yam_stick.jpeg" alt="Pack of Yams" class="yam-image">
-        </span>
-        <span>
+          <p class="centered-text"><strong>Yams harvested tied on sticks for storage</strong></p>
+        </div>
+        <div class="yams">
           <img src="assets/images/yam_on_stick.jpg" alt="Pack of Yams" class="yam-image">
-        </span>
+          <p class="centered-text"><strong>Yams tied on sticks and waiting for planting </strong></p>
+        </div>
         <div class="spacer"></div>
+      </section>
+      <section class="yam-history">
         <div>
           <h3 class="centered-text">History of Yam Festivals</h3>
           <p>Once upon a time, a severe famine struck an unnamed Igbo land. Plants withered and animals died. The people were livid. They pressured their king every day for a solution. Eze Nri, the king, spent many nights awake in search of an end to the famine. He was told that he had to kill his children. After killing them, he cut their bodies into small pieces before burying them. Six months later, plants grew out of the place where the body parts were buried. When Eze harvested them, he found yams and cocoyams. The yams brought the village out of the great famine. It is believed this Eze Nri’s dead son is the god of yam, Ahijoku, and Ada, his daughter was the cocoyam. Sometimes in Igbo mythology, the yam deity is a goddess called Ahia Njoku. Njoku is represented by the yam barns, with an effigy and a shrine.
