fix: fixed html errors after testing at validator.w3.org

--- a/festivals.html
+++ b/festivals.html
@@ -22,18 +22,17 @@
       <span class="link-span"
       ><a href="index.html" class=" nav-link">Home</a></span
     >
-    <span class="link-span"></span>
+    <span class="link-span">
       <a href="igbo-tribe.html" class="nav-link">Igbo Tribe</a>
-    </span>
     <a href="festivals.html" class="nav-link nav-link-selected">Festivals</a>
+    </span>
   </nav>
       <div class="spacer"></div>
-    </header>
+  </header>
     <article>
       <div class="yam-intro">
         <h3 class="centered-text">Celebrating New Yam Festival</h3>
       </div>
-      <section>
         <div class="videoitem">
           <hr class = "video-intro-line">
           <p>Celebrating new yam festival in Igbo land. The Eze (Traditional Ruler) of the community performs the ritual of being the first to cut and eat the new yam. After that, members of the community could partake of the eating of yams for the harvest season.</p>
@@ -48,17 +47,15 @@
             <p>Second video on celebrating new yam festival: Your browser doesn't support HTML5 video</p>
           </video>
         </div>
-
-      </section>
     </article>
     <footer>
       <div>
         <span><a href="index.html">Home</a></span
       >
-      <span class="footer-link"></span>
+      <span class="footer-link">
         <a href="igbo-tribe.html">Igbo Tribe</a>
       </span>
-      <span class="footer-link"></span>
+      <span class="footer-link">
       <a href="festivals.html">Festivals</a>
       </span>
 
