--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
       <span class="link-span"
       ><a href="index.html" class=" nav-link nav-link-selected">Home</a></span
     >
-    <span class="link-span"></span>
+    <span class="link-span">
       <a href="igbo-tribe.html" class="nav-link">Igbo Tribe</a>
     </span>
     <a href="festivals.html" class="nav-link">Festivals</a>
   </nav>
       <!-- <div class="spacer"></div> -->
     </header>
-    <article>
+    <section>
       <div class="yam-intro">
         <h3 class="centered-text">What really is Yam and why the Love for it?</h3>
         <p class="centered-text normal-size ">Yam is the common name for some plant species in the genus Dioscorea (family Dioscoreaceae) that form edible tubers.[1] Yams are perennial herbaceous vines cultivated for the consumption of their starchy tubers in many temperate and tropical regions, especially in West Africa, South America and the Caribbean, Asia, and Oceania.[1] The tubers themselves, also called "yams", come in a variety of forms owing to numerous cultivars and related species.[1]</p>
       </div>
-      <section class="yam-container">
+      <div class="yam-container">
         <div class="yams">
           <img src="assets/images/yams-2.jpg" alt="Pack of Yams" class="yam-image">
           <p class="centered-text"><strong>Yams harvested on ground</strong></p>
@@ -48,7 +48,8 @@
           <p class="centered-text"><strong>Yams tied on sticks and waiting for planting </strong></p>
         </div>
         <div class="spacer"></div>
-      </section>
+      </div>
+    </section>
       <section class="yam-history">
         <div>
           <h3 class="centered-text">History of Yam Festivals</h3>
@@ -58,18 +59,17 @@
           </p>
         </div>
       </section>
-    </article>
+
     <footer>
       <div>
         <span><a href="index.html">Home</a></span
       >
-      <span class="footer-link"></span>
+      <span class="footer-link">
         <a href="igbo-tribe.html">Igbo Tribe</a>
       </span>
-      <span class="footer-link"></span>
+      <span class="footer-link">
       <a href="festivals.html">Festivals</a>
       </span>
-
       </div>
       <span class="contact-us">Contact Us:</span>
       <a
@@ -93,14 +93,12 @@
       aria-label="Check us out on Twitter"
       ><img src="assets/images/twitter.png" alt="Twitter" class = "social-link-image"></a
     >
-
       <a
         href="http://linkedin.com/in/polycarp-anyanwu-pmp-a4265a11"
         target="_blank"
         rel="noopener"
         aria-label="Check us out on LinkedIn"><img src="assets/images/linkedin.png" alt="LinkedIn" class = "social-link-image">
       </a>
-
       <p class="copyright centered-text">Copyright © Polycarp Anyanwu as part of the requirements for a Diploma in Full Stack Software Development 2021</p>
     </footer>
   </body>
