feat: Add brief description of the banner on banner text

--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
     </header>
     <section id="banner-section">
       <img id="banner-image" src="../assets/images/igbo-ghana.webp" alt ="Igbos celebrating new yam">
-      <!-- <div id="banner-image"></div> -->
       <div id="banner-text">
-        <h2>Festival among the Igbos</h2>
-        <h3>Nigeria West Africa</h3>
+        <h3>Yam Festival among the Igbos</h3>
+        <h4>West Africa</h4>
       </div>
     </section>
 <section>
