--- a/index.html
+++ b/index.html
@@ -1,51 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Polycarp Anyanwu" />
-    <meta
-      name="description"
-      content="History of New Yam Festival among the Igbo Tribe of Eastern Nigeria"
-    />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <title>New Yam Festival</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Polycarp Anyanwu" />
+  <meta name="description" content="History of New Yam Festival among the Igbo Tribe of Eastern Nigeria" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <title>New Yam Festival</title>
 </head>
+
 <body>
-    <header>
-        <a href="index.html">
-            <h1 id="title">New Yam Festival</h1>
-          </a>
-          <nav id="menu-bar">
-            <ul>
-              <li>
-                <a href="index.html" class="selected">Home</a>
-              </li>
-              <li>
-                <a href="festivals.html">Festivals</a>
-              </li>
-              <li>
-                <a href="igbo.html">Igbo Tribe</a>
-              </li>
-            </ul>
-          </nav>
-    </header>
-    <section id="banner-section">
-      <img id="banner-image" src="../assets/images/igbo-ghana.webp" alt ="Igbos celebrating new yam">
-      <div id="banner-text">
-        <h3>Yam Festival among the Igbos</h3>
-        <h4>West Africa</h4>
-      </div>
-    </section>
-<section>
-    Intro Section
-</section>
-<section>
-    Image Gallery Section
-</section>
-<footer>
+  <header>
+    <a href="index.html">
+      <h1 id="title">New Yam Festival</h1>
+    </a>
+    <nav id="menu-bar">
+      <ul>
+        <li>
+          <a href="index.html" class="selected">Home</a>
+        </li>
+        <li>
+          <a href="festivals.html">Festivals</a>
+        </li>
+        <li>
+          <a href="igbo.html">Igbo Tribe</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <section id="banner-section">
+    <img id="banner-image" src="../assets/images/igbo-ghana.webp" alt="Igbos celebrating new yam">
+    <div id="banner-text">
+      <h3>Yam Festival among the Igbos</h3>
+      <h4>West Africa</h4>
+    </div>
+  </section>
+  <section id="yam-intro">
+    <div>
+      <h2>What is Yam and why the Love</h2>
+      <hr>
+    </div>
+    <div class="text-div">
+      <p>Yam is the common name for some plant species in the genus Dioscorea (family
+        Dioscoreaceae) that form edible tubers.[1] Yams are perennial herbaceous vines cultivated for the consumption of
+        their starchy tubers in many temperate and tropical regions, especially in West Africa, South America and the
+        Caribbean, Asia, and Oceania.[1] The tubers themselves, also called "yams", come in a variety of forms owing to
+        numerous cultivars and related species.[1]</p>
+    </div>
+    <div class="text-div">
+      <h2>History of Yam Festivals</h2>
+      <hr>
+      <p>Once upon a time, a severe famine struck an unnamed Igbo land. Plants withered and animals died. The people
+        were livid. They pressured their king every day for a solution. Eze Nri, the king, spent many nights awake in
+        search of an end to the famine. He was told that he had to kill his children. After killing them, he cut their
+        bodies into small pieces before burying them. Six months later, plants grew out of the place where the body
+        parts were buried. When Eze harvested them, he found yams and cocoyams. The yams brought the village out of the
+        great famine. It is believed this Eze Nri’s dead son is the god of yam, Ahijoku, and Ada, his daughter was the
+        cocoyam. Sometimes in Igbo mythology, the yam deity is a goddess called Ahia Njoku. Njoku is represented by the
+        yam barns, with an effigy and a shrine.
+      </p>
+      <br>
+      <p>Yams are the first crops to be harvested and are therefore the most important in Igbo land. Igbo people are
+        agrarian by nature and so yam is an important element of their culture. The New Yam Festival, Iwaji is done in
+        honor of Ahiajoku (Ajoku, Njoku, Ajokwuji). The word, Iwaji/Iriji means eating yam. The new yam signifies the
+        fruitful end to a work year and the beginning of a new one. The practice was said to have begun at the Arochukwu
+        community and as time went by, the practice spread around to other Igbo communities. In some places, the
+        festival lasts a whole day while in others, the festival extends up until a week. The festival is a celebration
+        of the importance of yam in the socio-cultural lives of the people of the community. It was described as the
+        crowning ceremony of the year. The new yam is evidence of a good life with accomplishments.
+      </p>
+    </div>
+
+  </section>
+  <section class="image-gallery">
+    <!-- <div class="pictures"> -->
+    <p>Test of ehere this test will appear</p>
+    <img src="assets/images/yam2.jpg" alt="yam">
+    <p>Test of another text or images on testing testing this test will appear</p>
+    <img src="assets/images/yam_celeb.jpeg" alt="yam">
+    <p>Local storage of yams on sticks awating another planting season</p>
+    <img src="assets/images/yam_stick.jpeg" alt="yam">
+    <p>Ibeku ancient kingdom in Umuahia North Local Government Area of Abia state, celebrating 2021 new yam festival in
+      a joyous mood</p>
+    <img src="assets/images/ibeku_people.jpg" alt="yam">
+
+    <img src="assets/images/yams-2.jpg" alt="yam">
+    <img src="assets/images/leboku_yam_festival.jpg" alt="Leboku Yam Festival Nigeria">
+    <!-- <img src = "assets/images/yam2.jpg" alt = "yam"> -->
+    <!-- </div> -->
+  </section>
+  <footer>
     Footer
-</footer>
+  </footer>
 </body>
+
 </html>
