fix: banner image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
   </header>
   <section id="banner-section">
-    <img id="banner-image" src="../assets/images/igbo-ghana1.png" alt="Igbos celebrating new yam">
+    <img id="banner-image" src="assets/images/igbo-ghana1.png" alt="Igbos celebrating new yam">
     <div id="banner-text">
       <h3>Yam Festival among the Igbos</h3>
       <h4>West Africa</h4>
