feat: Add footer items

--- a/index.html
+++ b/index.html
@@ -45,18 +45,17 @@
     </section>
     <section id="yam-intro">
       <div>
-        <h2>What is Yam and why the Love</h2>
+        <h2>What is Yam</h2>
         <hr />
       </div>
       <div class="text-div">
         <p>
-          Yam is the common name for some plant species in the genus Dioscorea
-          (family Dioscoreaceae) that form edible tubers.[1] Yams are perennial
-          herbaceous vines cultivated for the consumption of their starchy
-          tubers in many temperate and tropical regions, especially in West
-          Africa, South America and the Caribbean, Asia, and Oceania.[1] The
-          tubers themselves, also called "yams", come in a variety of forms
-          owing to numerous cultivars and related species.[1]
+          Yam is among the edible tubers Yams are perennial herbaceous vines
+          cultivated for the consumption of their starchy tubers in many
+          temperate and tropical regions, especially in West Africa, South
+          America and the Caribbean, Asia, and Oceania (Wikipedia). There are
+          various species of yams. Yams are particularly celebrated in the
+          eastern part of Nigeria where they are regarded as the king of crops.
         </p>
       </div>
       <div class="text-div">
@@ -161,8 +160,75 @@
             River State Nigeria
           </p>
         </div>
+        <div class="image">
+          <img
+            src="assets/images/igbo_ghana_yam.png"
+            alt="Igbo people in Ghana 2019 Celebration"
+          />
+        </div>
+        <p>
+          Igbo tribe in Ghana, West Africa celebrate New Yam Festival on 19
+          September, 2021. The event enabled Igbo people to come together to
+          thank God for a fruitful farm season. The showcased the rich Igbo
+          culture and cuisine to the world. The yam on the table was roasted and
+          could be eaten with palm oil and fresh herbs or stew or any soup as
+          the person deems necessary.
+        </p>
       </div>
     </section>
-    <footer>Footer</footer>
+    <footer>
+      <div class="footer-menu">
+        <span><a href="index.html" class="selected">Home</a></span>
+        <span class="footer-link">
+          <a href="igbo-tribe.html">Igbo Tribe</a>
+        </span>
+        <span class="footer-link">
+          <a href="festivals.html">Festivals</a>
+        </span>
+      </div>
+
+
+      <div class="contact-us">
+        <span>
+          Contact Us:
+          <a
+          href="https://www.facebook.com/polycarp.anyanwu"
+          target="_blank"
+          rel="noopener"
+          aria-label="Check us out on Facebook">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a
+          href="https://github.com/Polyanyanwu"
+          target="_blank"
+          rel="noopener"
+          aria-label="Check us out on Github"
+          ><i class="fab fa-github"></i></a>
+        <a
+          href="https://www.twitter.com"
+          target="_blank"
+          rel="noopener"
+          aria-label="Check us out on Twitter"
+          > <i class="fab fa-twitter"></i></a>
+        <a
+          href="http://linkedin.com/in/polycarp-anyanwu-pmp-a4265a11"
+          target="_blank"
+          rel="noopener"
+          aria-label="Check us out on LinkedIn">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        </span>
+
+
+  
+      <p class="copyright centered-text">
+        Copyright © Polycarp Anyanwu as part of the requirements for a Diploma
+        in Full Stack Software Development 2021
+      </p>
+    </footer>
+    <script
+      src="https://kit.fontawesome.com/af901081da.js"
+      crossorigin="anonymous">
+    </script>
   </body>
 </html>
