--- a/index.html
+++ b/index.html
@@ -1,234 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Polycarp Anyanwu" />
-    <meta
-      name="description"
-      content="History of New Yam Festival among the Igbo Tribe of Eastern Nigeria"
-    />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <title>New Yam Festival</title>
-  </head>
 
-  <body>
-    <header>
-      <a href="index.html">
-        <h1 id="title">New Yam Festival</h1>
-      </a>
-      <nav id="menu-bar">
-        <ul>
-          <li>
-            <a href="index.html" class="selected">Home</a>
-          </li>
-          <li>
-            <a href="festivals.html">Festivals</a>
-          </li>
-          <li>
-            <a href="igbo.html">Igbo Tribe</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <section id="banner-section">
-      <img
-        id="banner-image"
-        src="assets/images/igbo-ghana.webp"
-        alt="Igbos celebrating new yam"
-      />
-      <div id="banner-text">
-        <h3>Yam Festival among the Igbos</h3>
-        <h4>West Africa</h4>
-      </div>
-    </section>
-    <section id="yam-intro">
-      <div>
-        <h2>What is Yam</h2>
-        <hr />
-      </div>
-      <div class="text-div">
-        <p>
-          Yam is among the edible tubers Yams are perennial herbaceous vines
-          cultivated for the consumption of their starchy tubers in many
-          temperate and tropical regions, especially in West Africa, South
-          America and the Caribbean, Asia, and Oceania (Wikipedia). There are
-          various species of yams. Yams are particularly celebrated in the
-          eastern part of Nigeria where they are regarded as the king of crops.
-        </p>
-      </div>
-      <div class="text-div">
-        <h2>History of Yam Festivals</h2>
-        <hr />
-        <p>
-          Once upon a time, a severe famine struck an unnamed Igbo land. Plants
-          withered and animals died. The people were livid. They pressured their
-          king every day for a solution. Eze Nri, the king, spent many nights
-          awake in search of an end to the famine. He was told that he had to
-          kill his children. After killing them, he cut their bodies into small
-          pieces before burying them. Six months later, plants grew out of the
-          place where the body parts were buried. When Eze harvested them, he
-          found yams and cocoyams. The yams brought the village out of the great
-          famine. It is believed this Eze Nri’s dead son is the god of yam,
-          Ahijoku, and Ada, his daughter was the cocoyam. Sometimes in Igbo
-          mythology, the yam deity is a goddess called Ahia Njoku. Njoku is
-          represented by the yam barns, with an effigy and a shrine.
-        </p>
-        <br />
-        <p>
-          Yams are the first crops to be harvested and are therefore the most
-          important in Igbo land. Igbo people are agrarian by nature and so yam
-          is an important element of their culture. The New Yam Festival, Iwaji
-          is done in honor of Ahiajoku (Ajoku, Njoku, Ajokwuji). The word,
-          Iwaji/Iriji means eating yam. The new yam signifies the fruitful end
-          to a work year and the beginning of a new one. The practice was said
-          to have begun at the Arochukwu community and as time went by, the
-          practice spread around to other Igbo communities. In some places, the
-          festival lasts a whole day while in others, the festival extends up
-          until a week. The festival is a celebration of the importance of yam
-          in the socio-cultural lives of the people of the community. It was
-          described as the crowning ceremony of the year. The new yam is
-          evidence of a good life with accomplishments.
-        </p>
-      </div>
-    </section>
-    <section class="image-gallery">
-      <!-- <div class="pictures"> -->
-      <h2>Gallery of Yam and Celebrations</h2>
-      <div class="image-column">
-        <div class="image">
-          <img src="assets/images/yam2.jpg" alt="yam" />
-          <p>Colorful dances depicting the mood of the celebration of yam</p>
-        </div>
-        <div class="image">
-          <img src="assets/images/yam_celeb.jpeg" alt="yam" />
-          <p>
-            The New Yam Festival is an annual tradition observed by the Igbo
-            People of Eastern Nigeria. In some Igbo communities, the celebration
-            lasts a day but in some other communities, it usually takes a week.
-            This festival is core to the ancient Igbo culture as the Igbos see
-            yam as the king of all crops. To depict its prominence, The Igbos
-            observe this festival to thank the gods for a good harvest. At
-            Mbaise in Imo State it is celebrated on the 15 August of every year.
-          </p>
-        </div>
-        <div class="image">
-          <img src="assets/images/yam_plant.jpg" alt="yam" />
-          <p>
-            Yams are grown vertically on sticks in the field. The tubers are
-            harvested by digging them out of the soil beneath the plants at the
-            end of the planting season
-          </p>
-        </div>
-      </div>
-      <div class="image-column">
-        <div class="image">
-          <img src="assets/images/igbo_ukwu.png" alt="yam" />
-          <p>
-            The Igboukwu festival is celebrated yearly by the indigenous
-            communities of Igboukwu in Aguata Local Government Area of Anambra
-            state, Nigeria. It a fun-filled celebration with lot displays of
-            elegance and masquerades and many other cultural displays take
-            place.
-          </p>
-        </div>
-        <div div class="image">
-          <img src="assets/images/yam_stick.jpeg" alt="yam" />
-          <p>Local storage of yams on sticks awating another planting season</p>
-        </div>
-        <div class="image">
-          <img src="assets/images/ibeku_people.jpg" alt="yam" />
-          <p>
-            Ibeku ancient kingdom in Umuahia North Local Government Area of Abia
-            state, celebrating 2021 new yam festival in a joyous mood
-          </p>
-        </div>
-      </div>
-      <div class="image-column">
-        <div class="image">
-          <img src="assets/images/yams-2.jpg" alt="yam" />
-          <p>Heaps of yams in an open market in Nigeria</p>
-        </div>
-        <div class="image">
-          <img
-            src="assets/images/leboku_yam_festival.jpg"
-            alt="Leboku Yam Festival Nigeria"
-          />
-          <p>
-            Leboku New Yam Festival at Yakurr Local Government Area of Cross
-            River State Nigeria
-          </p>
-        </div>
-        <div class="image">
-          <img
-            src="assets/images/igbo_ghana_yam.png"
-            alt="Igbo people in Ghana 2019 Celebration"
-          />
-        </div>
-        <p>
-          Igbo tribe in Ghana, West Africa celebrate New Yam Festival on 19
-          September, 2021. The event enabled Igbo people to come together to
-          thank God for a fruitful farm season. The showcased the rich Igbo
-          culture and cuisine to the world. The yam on the table was roasted and
-          could be eaten with palm oil and fresh herbs or stew or any soup as
-          the person deems necessary.
-        </p>
-      </div>
-    </section>
-    <footer>
-      <div class="footer-menu">
-        <span><a href="index.html" class="selected">Home</a></span>
-        <span class="footer-link">
-          <a href="igbo-tribe.html">Igbo Tribe</a>
-        </span>
-        <span class="footer-link">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Polycarp Anyanwu" />
+  <meta name="description" content="History of New Yam Festival among the Igbo Tribe of Eastern Nigeria" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <title>New Yam Festival</title>
+</head>
+
+<body>
+  <header>
+    <a href="index.html">
+      <h1 id="title">New Yam Festival</h1>
+    </a>
+    <nav id="menu-bar">
+      <ul>
+        <li>
+          <a href="index.html" class="selected">Home</a>
+        </li>
+        <li>
           <a href="festivals.html">Festivals</a>
-        </span>
+        </li>
+        <li>
+          <a href="igbo.html">Igbo Tribe</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <section id="banner-section">
+    <img id="banner-image" src="assets/images/igbo-ghana.webp" alt="Igbos celebrating new yam" />
+    <div id="banner-text">
+      <h3>Yam Festival among the Igbos</h3>
+      <h4>West Africa</h4>
+    </div>
+  </section>
+  <section id="yam-intro">
+    <div>
+      <h2>What is Yam</h2>
+      <hr />
+    </div>
+    <div class="text-div">
+      <p>
+        Yam is among the edible tubers Yams are perennial herbaceous vines
+        cultivated for the consumption of their starchy tubers in many
+        temperate and tropical regions, especially in West Africa, South
+        America and the Caribbean, Asia, and Oceania (Wikipedia). There are
+        various species of yams. Yams are particularly celebrated in the
+        eastern part of Nigeria where they are regarded as the king of crops.
+      </p>
+    </div>
+    <div class="text-div">
+      <h2>History of Yam Festivals</h2>
+      <hr />
+      <p>
+        Once upon a time, a severe famine struck an unnamed Igbo land. Plants
+        withered and animals died. The people were livid. They pressured their
+        king every day for a solution. Eze Nri, the king, spent many nights
+        awake in search of an end to the famine. He was told that he had to
+        kill his children. After killing them, he cut their bodies into small
+        pieces before burying them. Six months later, plants grew out of the
+        place where the body parts were buried. When Eze harvested them, he
+        found yams and cocoyams. The yams brought the village out of the great
+        famine. It is believed this Eze Nri’s dead son is the god of yam,
+        Ahijoku, and Ada, his daughter was the cocoyam. Sometimes in Igbo
+        mythology, the yam deity is a goddess called Ahia Njoku. Njoku is
+        represented by the yam barns, with an effigy and a shrine.
+      </p>
+      <br />
+      <p>
+        Yams are the first crops to be harvested and are therefore the most
+        important in Igbo land. Igbo people are agrarian by nature and so yam
+        is an important element of their culture. The New Yam Festival, Iwaji
+        is done in honor of Ahiajoku (Ajoku, Njoku, Ajokwuji). The word,
+        Iwaji/Iriji means eating yam. The new yam signifies the fruitful end
+        to a work year and the beginning of a new one. The practice was said
+        to have begun at the Arochukwu community and as time went by, the
+        practice spread around to other Igbo communities. In some places, the
+        festival lasts a whole day while in others, the festival extends up
+        until a week. The festival is a celebration of the importance of yam
+        in the socio-cultural lives of the people of the community. It was
+        described as the crowning ceremony of the year. The new yam is
+        evidence of a good life with accomplishments.
+      </p>
+    </div>
+  </section>
+  <section class="image-gallery">
+    <!-- <div class="pictures"> -->
+    <h2>Gallery of Yam and Celebrations</h2>
+    <div class="image-column">
+      <div class="image">
+        <img src="assets/images/yam2.jpg" alt="yam" />
+        <p>Colorful dances depicting the mood of the celebration of yam</p>
       </div>
+      <div class="image">
+        <img src="assets/images/yam_celeb.jpeg" alt="yam" />
+        <p>
+          The New Yam Festival is an annual tradition observed by the Igbo
+          People of Eastern Nigeria. In some Igbo communities, the celebration
+          lasts a day but in some other communities, it usually takes a week.
+          This festival is core to the ancient Igbo culture as the Igbos see
+          yam as the king of all crops. To depict its prominence, The Igbos
+          observe this festival to thank the gods for a good harvest. At
+          Mbaise in Imo State it is celebrated on the 15 August of every year.
+        </p>
+      </div>
+      <div class="image">
+        <img src="assets/images/yam_plant.jpg" alt="yam" />
+        <p>
+          Yams are grown vertically on sticks in the field. The tubers are
+          harvested by digging them out of the soil beneath the plants at the
+          end of the planting season
+        </p>
+      </div>
+    </div>
+    <div class="image-column">
+      <div class="image">
+        <img src="assets/images/igbo_ukwu.png" alt="yam" />
+        <p>
+          The Igboukwu festival is celebrated yearly by the indigenous
+          communities of Igboukwu in Aguata Local Government Area of Anambra
+          state, Nigeria. It a fun-filled celebration with lot displays of
+          elegance and masquerades and many other cultural displays take
+          place.
+        </p>
+      </div>
+      <div div class="image">
+        <img src="assets/images/yam_stick.jpeg" alt="yam" />
+        <p>Local storage of yams on sticks awating another planting season</p>
+      </div>
+      <div class="image">
+        <img src="assets/images/ibeku_people.jpg" alt="yam" />
+        <p>
+          Ibeku ancient kingdom in Umuahia North Local Government Area of Abia
+          state, celebrating 2021 new yam festival in a joyous mood
+        </p>
+      </div>
+    </div>
+    <div class="image-column">
+      <div class="image">
+        <img src="assets/images/yams-2.jpg" alt="yam" />
+        <p>Heaps of yams in an open market in Nigeria</p>
+      </div>
+      <div class="image">
+        <img src="assets/images/leboku_yam_festival.jpg" alt="Leboku Yam Festival Nigeria" />
+        <p>
+          Leboku New Yam Festival at Yakurr Local Government Area of Cross
+          River State Nigeria
+        </p>
+      </div>
+      <div class="image">
+        <img src="assets/images/igbo_ghana_yam.png" alt="Igbo people in Ghana 2019 Celebration" />
+      </div>
+      <p>
+        Igbo tribe in Ghana, West Africa celebrate New Yam Festival on 19
+        September, 2021. The event enabled Igbo people to come together to
+        thank God for a fruitful farm season. The showcased the rich Igbo
+        culture and cuisine to the world. The yam on the table was roasted and
+        could be eaten with palm oil and fresh herbs or stew or any soup as
+        the person deems necessary.
+      </p>
+    </div>
+  </section>
+  <footer>
+    <div class="footer-menu">
+      <span><a href="index.html" class="selected">Home</a></span>
+      <span class="footer-link">
+        <a href="igbo-tribe.html">Igbo Tribe</a>
+      </span>
+      <span class="footer-link">
+        <a href="festivals.html">Festivals</a>
+      </span>
+    </div>
 
 
-      <div class="contact-us">
-        <span>
-          Contact Us:
-          <a
-          href="https://www.facebook.com/polycarp.anyanwu"
-          target="_blank"
-          rel="noopener"
+    <div class="contact-us">
+      <span>
+        Contact Us:
+        <a href="https://www.facebook.com/polycarp.anyanwu" target="_blank" rel="noopener"
           aria-label="Check us out on Facebook">
           <i class="fab fa-facebook"></i>
         </a>
-        <a
-          href="https://github.com/Polyanyanwu"
-          target="_blank"
-          rel="noopener"
-          aria-label="Check us out on Github"
-          ><i class="fab fa-github"></i></a>
-        <a
-          href="https://www.twitter.com"
-          target="_blank"
-          rel="noopener"
-          aria-label="Check us out on Twitter"
-          > <i class="fab fa-twitter"></i></a>
-        <a
-          href="http://linkedin.com/in/polycarp-anyanwu-pmp-a4265a11"
-          target="_blank"
-          rel="noopener"
+        <a href="https://github.com/Polyanyanwu" target="_blank" rel="noopener" aria-label="Check us out on Github"><i
+            class="fab fa-github"></i></a>
+        <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Check us out on Twitter"> <i
+            class="fab fa-twitter"></i></a>
+        <a href="http://linkedin.com/in/polycarp-anyanwu-pmp-a4265a11" target="_blank" rel="noopener"
           aria-label="Check us out on LinkedIn">
           <i class="fab fa-linkedin"></i>
         </a>
-        </span>
+      </span>
 
 
-  
-      <p class="copyright centered-text">
+
+      <p>
         Copyright © Polycarp Anyanwu as part of the requirements for a Diploma
         in Full Stack Software Development 2021
       </p>
-    </footer>
-    <script
-      src="https://kit.fontawesome.com/af901081da.js"
-      crossorigin="anonymous">
-    </script>
-  </body>
+  </footer>
+  <script src="https://kit.fontawesome.com/af901081da.js" crossorigin="anonymous">
+  </script>
+</body>
+
 </html>
