Modify our layout to 2 colum image and fine tune media queries

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </p>
       </div>
     </div>
-    <div class="image-column">
+    <!-- <div class="image-column">
       <div class="image">
         <img src="assets/images/yams-2.jpg" alt="yam" />
         <p>Heaps of yams in an open market in Nigeria</p>
@@ -162,7 +162,7 @@
         could be eaten with palm oil and fresh herbs or stew or any soup as
         the person deems necessary.
       </p>
-    </div>
+    </div> -->
   </section>
   <footer>
     <div class="footer-menu">
