Modify layout of the images

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </ul>
     </nav>
   </header>
+  <main>
   <section id="banner-section">
     <img id="banner-image" src="assets/images/igbo-ghana.webp" alt="Igbos celebrating new yam" />
     <div id="banner-text">
@@ -90,7 +91,7 @@
   <section class="image-gallery">
     <!-- <div class="pictures"> -->
     <h2>Gallery of Yam and Celebrations</h2>
-    <div class="image-column">
+ 
       <div class="image">
         <img src="assets/images/yam2.jpg" alt="yam" />
         <p>Colorful dances depicting the mood of the celebration of yam</p>
@@ -115,8 +116,8 @@
           end of the planting season
         </p>
       </div>
-    </div>
-    <div class="image-column">
+
+ 
       <div class="image">
         <img src="assets/images/igbo_ukwu.png" alt="yam" />
         <p>
@@ -138,7 +139,7 @@
           state, celebrating 2021 new yam festival in a joyous mood
         </p>
       </div>
-    </div>
+
     <!-- <div class="image-column">
       <div class="image">
         <img src="assets/images/yams-2.jpg" alt="yam" />
@@ -164,6 +165,7 @@
       </p>
     </div> -->
   </section>
+</main>
   <footer>
     <div class="footer-menu">
       <span><a href="index.html" class="selected">Home</a></span>
