Modify css to position images better, add divider lines

--- a/index.html
+++ b/index.html
@@ -31,72 +31,73 @@
     </nav>
   </header>
   <main>
-  <section id="banner-section">
-    <img id="banner-image" src="assets/images/igbo-ghana.webp" alt="Igbos celebrating new yam" />
-    <div id="banner-text">
-      <h2>Yam Festival among the Igbos</h2>
-      <h2>West Africa</h2>
-    </div>
-  </section>
-  <section id="yam-intro">
-    <div>
-      <h2>What is Yam</h2>
-      <hr />
-    </div>
-    <div class="text-div">
-      <p>
-        Yam is among the edible tubers Yams are perennial herbaceous vines
-        cultivated for the consumption of their starchy tubers in many
-        temperate and tropical regions, especially in West Africa, South
-        America and the Caribbean, Asia, and Oceania (Wikipedia). There are
-        various species of yams. Yams are particularly celebrated in the
-        eastern part of Nigeria where they are regarded as the king of crops.
-      </p>
-    </div>
-    <div class="text-div">
-      <h2>History of Yam Festivals</h2>
-      <hr />
-      <p>
-        Once upon a time, a severe famine struck an unnamed Igbo land. Plants
-        withered and animals died. The people were livid. They pressured their
-        king every day for a solution. Eze Nri, the king, spent many nights
-        awake in search of an end to the famine. He was told that he had to
-        kill his children. After killing them, he cut their bodies into small
-        pieces before burying them. Six months later, plants grew out of the
-        place where the body parts were buried. When Eze harvested them, he
-        found yams and cocoyams. The yams brought the village out of the great
-        famine. It is believed this Eze Nri’s dead son is the god of yam,
-        Ahijoku, and Ada, his daughter was the cocoyam. Sometimes in Igbo
-        mythology, the yam deity is a goddess called Ahia Njoku. Njoku is
-        represented by the yam barns, with an effigy and a shrine.
-      </p>
-      <br />
-      <p>
-        Yams are the first crops to be harvested and are therefore the most
-        important in Igbo land. Igbo people are agrarian by nature and so yam
-        is an important element of their culture. The New Yam Festival, Iwaji
-        is done in honor of Ahiajoku (Ajoku, Njoku, Ajokwuji). The word,
-        Iwaji/Iriji means eating yam. The new yam signifies the fruitful end
-        to a work year and the beginning of a new one. The practice was said
-        to have begun at the Arochukwu community and as time went by, the
-        practice spread around to other Igbo communities. In some places, the
-        festival lasts a whole day while in others, the festival extends up
-        until a week. The festival is a celebration of the importance of yam
-        in the socio-cultural lives of the people of the community. It was
-        described as the crowning ceremony of the year. The new yam is
-        evidence of a good life with accomplishments.
-      </p>
-    </div>
-  </section>
-  <section class="image-gallery">
-    <!-- <div class="pictures"> -->
-    <h2>Gallery of Yam and Celebrations</h2>
- 
+    <section id="banner-section">
+      <img id="banner-image" src="assets/images/igbo-ghana.webp" alt="Igbos celebrating new yam" />
+      <div id="banner-text">
+        <h2>Yam Festival among the Igbos</h2>
+        <h2>West Africa</h2>
+      </div>
+    </section>
+    <section id="yam-intro">
+      <div>
+        <h2>What is Yam</h2>
+        <hr />
+      </div>
+      <div class="text-div">
+        <p>
+          Yam is among the edible tubers Yams are perennial herbaceous vines
+          cultivated for the consumption of their starchy tubers in many
+          temperate and tropical regions, especially in West Africa, South
+          America and the Caribbean, Asia, and Oceania (Wikipedia). There are
+          various species of yams. Yams are particularly celebrated in the
+          eastern part of Nigeria where they are regarded as the king of crops.
+        </p>
+      </div>
+      <div class="text-div">
+        <h2>History of Yam Festivals</h2>
+        <hr />
+        <p>
+          Once upon a time, a severe famine struck an unnamed Igbo land. Plants
+          withered and animals died. The people were livid. They pressured their
+          king every day for a solution. Eze Nri, the king, spent many nights
+          awake in search of an end to the famine. He was told that he had to
+          kill his children. After killing them, he cut their bodies into small
+          pieces before burying them. Six months later, plants grew out of the
+          place where the body parts were buried. When Eze harvested them, he
+          found yams and cocoyams. The yams brought the village out of the great
+          famine. It is believed this Eze Nri’s dead son is the god of yam,
+          Ahijoku, and Ada, his daughter was the cocoyam. Sometimes in Igbo
+          mythology, the yam deity is a goddess called Ahia Njoku. Njoku is
+          represented by the yam barns, with an effigy and a shrine.
+        </p>
+        <br />
+        <p>
+          Yams are the first crops to be harvested and are therefore the most
+          important in Igbo land. Igbo people are agrarian by nature and so yam
+          is an important element of their culture. The New Yam Festival, Iwaji
+          is done in honor of Ahiajoku (Ajoku, Njoku, Ajokwuji). The word,
+          Iwaji/Iriji means eating yam. The new yam signifies the fruitful end
+          to a work year and the beginning of a new one. The practice was said
+          to have begun at the Arochukwu community and as time went by, the
+          practice spread around to other Igbo communities. In some places, the
+          festival lasts a whole day while in others, the festival extends up
+          until a week. The festival is a celebration of the importance of yam
+          in the socio-cultural lives of the people of the community. It was
+          described as the crowning ceremony of the year. The new yam is
+          evidence of a good life with accomplishments.
+        </p>
+      </div>
+    </section>
+    <section class="image-gallery">
+      <!-- <div class="pictures"> -->
+      <h2>Gallery of Yam and Celebrations</h2>
+      <hr>
       <div class="image">
         <img src="assets/images/yam2.jpg" alt="yam" />
         <p>Colorful dances depicting the mood of the celebration of yam</p>
       </div>
       <div class="image">
+        <hr class="image-intro-line">
         <img src="assets/images/yam_celeb.jpeg" alt="yam" />
         <p>
           The New Yam Festival is an annual tradition observed by the Igbo
@@ -109,6 +110,7 @@
         </p>
       </div>
       <div class="image">
+        <hr class="image-intro-line">
         <img src="assets/images/yam_plant.jpg" alt="yam" />
         <p>
           Yams are grown vertically on sticks in the field. The tubers are
@@ -117,8 +119,9 @@
         </p>
       </div>
 
- 
+
       <div class="image">
+        <hr class="image-intro-line">
         <img src="assets/images/igbo_ukwu.png" alt="yam" />
         <p>
           The Igboukwu festival is celebrated yearly by the indigenous
@@ -129,10 +132,12 @@
         </p>
       </div>
       <div div class="image">
+        <hr class="image-intro-line">
         <img src="assets/images/yam_stick.jpeg" alt="yam" />
         <p>Local storage of yams on sticks awating another planting season</p>
       </div>
       <div class="image">
+        <hr class="image-intro-line">
         <img src="assets/images/ibeku_people.jpg" alt="yam" />
         <p>
           Ibeku ancient kingdom in Umuahia North Local Government Area of Abia
@@ -140,7 +145,7 @@
         </p>
       </div>
 
-    <!-- <div class="image-column">
+      <!-- <div class="image-column">
       <div class="image">
         <img src="assets/images/yams-2.jpg" alt="yam" />
         <p>Heaps of yams in an open market in Nigeria</p>
@@ -164,8 +169,8 @@
         the person deems necessary.
       </p>
     </div> -->
-  </section>
-</main>
+    </section>
+  </main>
   <footer>
     <div class="footer-menu">
       <span><a href="index.html" class="selected">Home</a></span>
