Modify media query to make single colum picture gallery for small screen

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           place.
         </p>
       </div>
-      <div div class="image">
+      <div class="image">
         <hr class="image-intro-line">
         <img src="assets/images/yam_stick.jpeg" alt="yam" />
         <p>Local storage of yams on sticks awating another planting season</p>
@@ -199,6 +199,7 @@
           <i class="fab fa-linkedin"></i>
         </a>
       </span>
+      </div>
   </footer>
   <script src="https://kit.fontawesome.com/af901081da.js" crossorigin="anonymous">
   </script>
