--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="yam-intro">
       <div>
         <h2>What is Yam</h2>
-        <hr />
+        <hr class="full-line">
       </div>
       <div class="text-div">
         <p>
@@ -55,7 +55,7 @@
       </div>
       <div class="text-div">
         <h2>History of Yam Festivals</h2>
-        <hr />
+        <hr class="full-line">
         <p>
           Once upon a time, a severe famine struck an unnamed Igbo land. Plants
           withered and animals died. The people were livid. They pressured their
@@ -91,8 +91,9 @@
     <section class="image-gallery">
       <!-- <div class="pictures"> -->
       <h2>Gallery of Yam and Celebrations</h2>
-      <hr>
+      <hr class="full-line">
       <div class="image">
+        <hr class="image-intro-line">
         <img src="assets/images/yam2.jpg" alt="yam" />
         <p>Colorful dances depicting the mood of the celebration of yam</p>
       </div>
