Compressed images to webp format

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name ="Cache-Control" content="public">
+  <meta name ="Cache-Control" content= "max-age=31536000">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Polycarp Anyanwu" />
   <meta name="description" content="History of New Yam Festival among the Igbo Tribe of Eastern Nigeria" />
@@ -94,12 +96,12 @@
       <hr class="full-line">
       <div class="image">
         <hr class="image-intro-line">
-        <img src="assets/images/yam2.jpg" alt="yam" />
+        <img src="assets/images/yam2.webp" alt="yam" />
         <p>Colorful dances depicting the mood of the celebration of yam</p>
       </div>
       <div class="image">
         <hr class="image-intro-line">
-        <img src="assets/images/yam_celeb.jpeg" alt="yam" />
+        <img src="assets/images/yam_celeb.webp" alt="yam" />
         <p>
           The New Yam Festival is an annual tradition observed by the Igbo
           People of Eastern Nigeria. In some Igbo communities, the celebration
@@ -112,7 +114,7 @@
       </div>
       <div class="image">
         <hr class="image-intro-line">
-        <img src="assets/images/yam_plant.jpg" alt="yam" />
+        <img src="assets/images/yam_plant.webp" alt="yam" />
         <p>
           Yams are grown vertically on sticks in the field. The tubers are
           harvested by digging them out of the soil beneath the plants at the
@@ -123,7 +125,7 @@
 
       <div class="image">
         <hr class="image-intro-line">
-        <img src="assets/images/igbo_ukwu.png" alt="yam" />
+        <img src="assets/images/igbo_ukwu.webp" alt="yam" />
         <p>
           The Igboukwu festival is celebrated yearly by the indigenous
           communities of Igboukwu in Aguata Local Government Area of Anambra
@@ -134,12 +136,12 @@
       </div>
       <div class="image">
         <hr class="image-intro-line">
-        <img src="assets/images/yam_stick.jpeg" alt="yam" />
+        <img src="assets/images/yam_stick.webp" alt="yam" />
         <p>Local storage of yams on sticks awating another planting season</p>
       </div>
       <div class="image">
         <hr class="image-intro-line">
-        <img src="assets/images/ibeku_people.jpg" alt="yam" />
+        <img src="assets/images/ibeku_people.webp" alt="yam" />
         <p>
           Ibeku ancient kingdom in Umuahia North Local Government Area of Abia
           state, celebrating 2021 new yam festival in a joyous mood
