--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name ="Cache-Control" content="public">
-  <meta name ="Cache-Control" content= "max-age=31536000">
+  <!-- We have static images, they can as well be cached to speed up performance -->
+  <meta name="Cache-Control" content="public">
+  <meta name="Cache-Control" content="max-age=31536000">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Polycarp Anyanwu" />
   <meta name="description" content="History of New Yam Festival among the Igbo Tribe of Eastern Nigeria" />
@@ -24,7 +25,7 @@
           <a href="index.html" class="selected">Home</a>
         </li>
         <li>
-          <a href="festivals.html">Festivals</a>
+          <a href="#festival-section">Festivals</a>
         </li>
         <li>
           <a href="igbo.html">Igbo Tribe</a>
@@ -173,6 +174,56 @@
       </p>
     </div> -->
     </section>
+    <section id="festival-section">
+      <h2>Celebration Events in Video and Images</h2>
+      <hr class="full-line">
+
+      <div class="videoitem">
+        <hr class="image-intro-line">
+
+        <video src="assets/videos/yam_festival1.mp4" controls>
+          <p class="video-intro-text">video on celebrating new yam festival: Your browser doesn't support HTML5
+            video</p>
+        </video>
+        <p>Celebrating new yam festival in Igbo land. The Eze (Traditional Ruler) of the community performs the ritual
+          of
+          being the first to cut and eat the new yam. After that, members of the community could partake of the eating
+          of
+          yams for the harvest season.</p>
+        <a href="https://www.youtube.com/watch?v=awBHeFO3228" target="_blank" rel="noopener"
+          aria-label="Watch the full video on youtube"> You may watch the full video on YouTube <i
+            class="fab fa-youtube"></i> at this address.
+        </a>
+      </div>
+
+      <div class="videoitem">
+        <hr class="image-intro-line">
+
+        <video src="assets/videos/yam_festival2.mp4" controls loop title="DANCE DANCE">
+          <p>Second video on celebrating new yam festival: Your browser doesn't support HTML5 video</p>
+        </video>
+        <p>
+          The New Yam Festival is accompanied by different colorful traditional displays. The Mkponkiti dance is typical
+          of such dance during the festival. Ecah Igbo community may have unique dance styles they are known for during
+          celebrations, the yam festival is typical day to showcase such dance steps.
+        </p>
+        <p>Several traditional/cultural dances are displayed by the people and a joyous mood. Sometimes illustrous sons
+          of
+          the town offer assistance to their fellow citizens to mark the celebrations. In some instances traditional
+          titles are conferred on deserving indigenes of the town </p>
+      </div>
+      <div class="videoitem">
+        <hr class="image-intro-line">
+        <!-- Courtesy of https://www.youtube.com/watch?v=ZrPPYXIdAZg -->
+        <iframe  src="https://www.youtube.com/embed/ZrPPYXIdAZg" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+          <p>Igbo people at Enugu State, South Eastern Nigeria celebrating the new yam festival in grand style.</p>
+      </div>
+      
+
+    </section>
   </main>
   <footer>
     <div class="footer-menu">
@@ -181,7 +232,7 @@
         <a href="igbo-tribe.html">Igbo Tribe</a>
       </span>
       <span class="footer-link">
-        <a href="festivals.html">Festivals</a>
+        <a href="#festival-section">Festivals</a>
       </span>
     </div>
 
@@ -202,7 +253,7 @@
           <i class="fab fa-linkedin"></i>
         </a>
       </span>
-      </div>
+    </div>
   </footer>
   <script src="https://kit.fontawesome.com/af901081da.js" crossorigin="anonymous">
   </script>
